# langtech

./: Homework.dfy  Main.hs  haskell-intro.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/dea5180d/: cabal_macros.h
dist-newstyle/cache/: compiler  config
